Version 1.3.6
* Post DiFX-1.5.4
* Improve string (mostly filename) handling safety with snprintf

Version 1.3.5
* m5d and m5spec : behave better if -h is given
* mark5_format_mark5b_init: if no nanoseconds in headers, then assume 2048-16-2 (this is to support Mark5B mode via Mark5C)
* Version for DiFX-1.5.4

Version 1.3.4
* Some memory leak fixes from Alexander Neidhardt and Martin Ettl (from Wettzell)
* Fix some compiler warnings
* Apply some minor fixes suggested by Martin Ettl
* Add m5fold utility
* Remove the "mark5cb" mode which never turned out to exist
* Version for DiFX-1.5.3

Version 1.3.3
* Fix blank range checking for a small subset of modes
	(Thanks to Sergei Pogrebenko and Jan Wagner for the bug report)
* Version for DiFX-1.5.2

Version 1.3.2
* Fix sample granularity calculation for Mark5B
* Version for DiFX-1.5.1
* Add VLBN format == VLBA without data modulation

Version 1.3.1
* Version for DiFX-1.5

Version 1.3.0
* Post NRAO-DiFX 1.1
* Fix file based stream offset problem for all data alignments
* Start of Mark5C development

Version 1.2.3
* fix minor bug in blanking code -- end of header not blanked on first frame
  of mark4 format
* add m5spec -- a spectrometer test program.  Needs fftw3 to compile.
* allow offsets > 2 GiB
* add m5test -- look for problems in data files
* add consecutivefails.  
* fix to file stream type -- sometimes 1 frame would be skipped
* fix to mark4 decoding -- sample offset was wrong.  stupid data replacement!

Version 1.2.2
* rename oversampling to decimation

Version 1.2.1
* add oversampling (factors 1, 2, 4, 8+) support to mark4 vlba mark5 formats

Version 1.2.0
* fix some Mark5B issues.  This required changing ns to be a double throughout.

Version 1.1.3
* fix datestamp on mark4 data -- subtract 1 day (Jan 0, not Jan 1 is the zeroth day of year)

Version 1.1.2
* Support < 8 tracks on vlba and mark4 formats
* new unpack function allowing offset into stream

Version 1.1.1
* Fix unpack/blanker issue