@@ -74,7 +74,10 @@ static int mark5_stream_file_fill(struct mark5_stream *ms)
 	
 	while(n < F->fetchsize)
 	{
-		close(F->in);
+		if(F->in != 0)
+		{
+			close(F->in);
+		}
 		F->in = 0;
 		F->curfile++;
 		
@@ -139,7 +142,10 @@ static int mark5_stream_file_init(struct mark5_stream *ms)
 	F->end = 0;
 	F->fetchsize = 0;
 
-	lseek64(F->in, F->offset, SEEK_SET);
+	if(F->offset > 0)
+	{
+		lseek64(F->in, F->offset, SEEK_SET);
+	}
 	F->buffer = (uint8_t *)calloc(1, F->buffersize);
 	ms->datawindow = F->buffer;
 	ms->datawindowsize = F->buffersize;
@@ -147,7 +153,8 @@ static int mark5_stream_file_init(struct mark5_stream *ms)
 	v = read(F->in, F->buffer, F->buffersize);
 	if(v < F->buffersize)
 	{
-		return -1;
+		fprintf(stderr, "mark5_stream_file_init: Initial read of %d was short (%d bytes actually read).  Shortening datawindowsize\n", F->buffersize, r);
+		ms->datawindowsize = F->buffersize = r;
 	}
 
 	return 0;
@@ -201,24 +208,6 @@ static int mark5_stream_file_next(struct mark5_stream *ms)
 
 	return ms->framebytes;
 }
-
-/* Work in progress */
-#if 0
-static int mark5_stream_file_next_subframe(struct mark5_stream *ms)
-{
-	struct mark5_stream_file *F;
-	/* int nframes, status; */
-
-	F = (struct mark5_stream_file *)(ms->inputdata);
-	
-	if(F->fetchsize == 0)	/* finish some initialization */
-	{
-		
-	}
-
-	return 0;
-}
-#endif
 
 static int mark5_stream_file_seek(struct mark5_stream *ms, int64_t framenum)
 {
@@ -282,7 +271,14 @@ struct mark5_stream_generic *new_mark5_stream_file(const char *filename,
 	int in;
 	int err;
 
-	in = open64(filename, O_RDONLY);
+	if(strcmp(filename, "-") == 0)
+	{
+		in = 0; /* stdin */
+	}
+	else
+	{
+		in = open64(filename, O_RDONLY);
+	}
 
 	if(in < 0)
 	{
@@ -305,12 +301,21 @@ struct mark5_stream_generic *new_mark5_stream_file(const char *filename,
 		sizeof(struct mark5_stream_generic));
 	F = (struct mark5_stream_file *)calloc(1,
 		sizeof(struct mark5_stream_file));
-	strcpy(F->files[0], filename);
 
 	F->in = in;
-	F->filesize = fileStatus.st_size;
+	if(in == 0)
+	{
+		F->filesize = 1LL<<61;
+		F->buffersize = 1<<17;
+		snprintf(F->files[0], MARK5_STREAM_ID_LENGTH, "%s", "<stdin>");
+	}
+	else
+	{
+		F->filesize = fileStatus.st_size;
+		F->buffersize = F->filesize > 1<<20 ? 1<<20 : F->filesize;
+		snprintf(F->files[0], MARK5_STREAM_ID_LENGTH, "%s", filename);
+	}
 	F->nfiles = 1;
-	F->buffersize = F->filesize > 1<<20 ? 1<<20 : F->filesize;
 	F->offset = offset;
 
 	V->init_stream = mark5_stream_file_init;
@@ -337,7 +342,7 @@ int mark5_stream_file_add_infile(struct mark5_stream *ms, const char *filename)
 
 	if(F->nfiles < MAX_MARK5_STREAM_FILES)
 	{
-		strcpy(F->files[F->nfiles], filename);
+		snprintf(F->files[F->nfiles], MARK5_STREAM_ID_LENGTH, "%s", filename);
 		F->nfiles++;
 		snprintf(ms->streamname, MARK5_STREAM_ID_LENGTH,
 			"File-%d/%d=%s", F->curfile, F->nfiles, filename);
